--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
-    <header><h1>vai ser uma imagem aqui</h1>
-        <ul></ul>
-        <ul>2°A-Tarde- Programação 2024 </ul>
-        <ul>Colegio Estatual OLAVO BILAC</ul>
-
-    </header>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="Colegio Estadual Olavo Bilac" alt="Colegio Estadual Olavo Bilac">
+        <ul class="cabecalho-lista">
+            <ul class="cabecalho-lista-item">2°A-Tarde </ul>
+            <ul class="cabecalho-lista-item">programação 2024 </ul>
+        </ul>
+  </header>
 </body>
 </html>
